# GeoCos-Backend

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yml  CONTRIBUTORS.txt  LICENSE  README.md  docker-compose.docs.yml  docker-compose.local.yml  docker-compose.production.yml  manage.py  package.json  pnpm-lock.yaml  pyproject.toml
.devcontainer/: devcontainer.json
.envs/.local/: .django  .postgres
.github/: actionlint.yaml  dependabot.yml  labeler.yml
.github/workflows/: ci.yml  commit-message-check.yml  dependabot-uv-lock.yml  deploy.yml  sync.yml
compose/local/django/: Dockerfile
compose/local/docs/: Dockerfile
compose/production/django/: Dockerfile
compose/production/postgres/: Dockerfile
compose/production/traefik/: traefik.yml
config/: api_router.py  asgi.py  celery_app.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
cosray_backend/: conftest.py
cosray_backend/iotdb/: apps.py  client.py
cosray_backend/iotdb/tests/: test_client.py  test_client_integration.py  test_integration.py
cosray_backend/mu_packets/: apps.py  domain.py  services.py  timeutils.py
cosray_backend/mu_packets/api/: serializers.py  views.py
cosray_backend/mu_packets/tests/: test_api.py  test_domain.py  test_services.py
cosray_backend/static/css/: project.css
cosray_backend/static/js/: project.js
cosray_backend/users/: adapters.py  apps.py  models.py  signals.py  urls.py  views.py
cosray_backend/users/api/: serializers.py  views.py
cosray_backend/users/migrations/: 0001_initial.py
cosray_backend/users/tests/: factories.py  test_admin.py  test_forms.py  test_models.py  test_signals.py  test_urls.py  test_views.py
cosray_backend/users/tests/api/: test_openapi.py  test_urls.py  test_views.py
docs/: conf.py  howto.rst  index.rst  make.bat  users.rst
geocos_backend/: conftest.py
geocos_backend/contrib/sites/migrations/: 0003_set_site_domain_and_name.py
geocos_backend/iotdb/: apps.py  client.py  exceptions.py
geocos_backend/iotdb/tests/: test_client_integration.py  test_client_unit.py
geocos_backend/mu_packets/: apps.py  services.py
geocos_backend/mu_packets/api/: serializers.py  views.py
geocos_backend/mu_packets/tests/: test_api.py  test_services.py
geocos_backend/templates/: base.html
geocos_backend/users/: adapters.py  apps.py  models.py  views.py
geocos_backend/users/api/: serializers.py  views.py
geocos_backend/users/migrations/: 0001_initial.py
geocos_backend/users/tests/: factories.py  test_adapters.py  test_admin.py  test_forms.py  test_models.py  test_tasks.py  test_urls.py  test_views.py
geocos_backend/users/tests/api/: test_urls.py  test_views.py
locale/en_US/LC_MESSAGES/: django.po
locale/fr_FR/LC_MESSAGES/: django.po
locale/pt_BR/LC_MESSAGES/: django.po
tests/: test_asgi.py  test_urls.py
webpack/: common.config.js
